# sp8-analysis

./: .dockerignore  .gitignore  0912CamacDAN_4hit_analysis_posi.cpp  AnalysisConfig.json  AnalysisDAN.cpp  BaseAnalysisConfig.json  BaseSortConfig.json  CAMAC.cif  CDAQ.h  CDan.cpp  CDan.dsp  CDan.dsw  CDan.h  CDan.opensdf  CDan.opt  CDan.plg  CDan.rc  CDan.sln  CDan.vcproj  CDan.vcxproj  CDan.vcxproj.filters  CMakeLists.txt  COBOLDPC.HLP  CamacDAN_4hit_analysis_posi.cpp  CamacDAN_4hit_analysis_posi.cpp070718  CamacDAN_4hit_analysis_posi_or.cpp  CheckProcess.H  Cobold.lib  CoboldDll.h  CoboldPC.GID  Copy of sellect.lmf  DAQ-CamacStandard-Parameters.ccf  DAQ-HM1Standard-Coordinates.ccf  DAn.dll.last  DAn.dlla  DanUtilities.cpp  DanUtilities.h  Dockerfile  Edit5  Edit7  (+39 more)
Analysis/: Analysis.h  AnalysisTools.cpp  AnalysisTools.h  CMakeLists.txt  CodeStyle.xml  Doxyfile  Electron.cpp  ElectronParameters.cpp  Electrons.cpp  Electrons.h  EquipmentParameters.cpp  EquipmentParameters.h  EventDataReader.cpp  EventDataReader.h  Finalize.cpp  Finalize.h  Flag.cpp  Flag.h  Initialize.cpp  Initialize.h  Ion.cpp  Ion.h  IonParameters.h  Ions.cpp  Ions.h  JSONFlag.cpp  JSONFlag.h  JSONReader.cpp  JSONReader.h  LMFReader.cpp  LMFReader.h  LogWriter.cpp  LogWriter.h  Object.cpp  Object.h  ObjectFlag.cpp  ObjectFlag.h  ObjectParameters.cpp  Objects.cpp  Objects.h  (+5 more)
Analysis/Example/: Main.cpp
AnalysisCore/: AnalysisTools.cpp  AnalysisTools.h  CMakeLists.txt  Electron.cpp  Electron.h  Electrons.cpp  EquipmentParameters.cpp  EquipmentParameters.h  EventDataReader.cpp  EventDataReader.h  Ion.h  Ions.cpp  JSONHandler  LogWriter.cpp  LogWriter.h  Object.cpp  Object.h  ObjectFlag.cpp  ObjectFlag.h  ObjectParameters.cpp  ObjectParameters.h  Objects.cpp  Objects.h  Unit.h
AnalysisCore/include/: AnalysisTools.h  Electron.h  Electrons.h  EquipmentParameters.h  EventDataReader.h  Flag.h  Ion.h  Ions.h  LogWriter.h  Object.h  ObjectFlag.h  ObjectParameters.h  Objects.h  Unit.h
AnalysisExe/: AnalysisCore  AnalysisRun.cpp  AnalysisRun.h  CMakeLists.txt  ConfigFile.json  Examples.py  Flag.cpp  Main.cpp  OutputFlag.h  OutputHist.cpp  OutputHist.h  Run.cpp  Run.h
CoboldPC2002/: AnalysisDAN.cpp  CDan.cpp  CDan.rc  CMakeLists.txt  DanUtilities.cpp  SoftwareDependent.cpp  StandardDAN.cpp
CoboldPC2002/SLNs/VS2010/: CDan.sln
CoboldPC2002/SLNs/VS2015/: CDan.sln  CDan.vcxproj
Core/: AnalysisTools.cpp  AnalysisTools.h  CMakeLists.txt  Electron.cpp  Electrons.cpp  EquipmentParameters.cpp  EventDataFlag.cpp  EventDataReader.cpp  EventDataReader.h  Flag.cpp  Flag.h  Hist.cpp  Hist.h  Ion.cpp  IonParameters.cpp  JSONFlag.cpp  JSONFlag.h  JSONReader.cpp  JSONReader.h  LogWriter.cpp  LogWriter.h  Object.cpp  Object.h  ObjectFlag.cpp  ObjectFlag.h  ObjectParameters.cpp  ObjectParameters.h  Objects.cpp  Objects.h  Unit.cpp  Unit.h
Core/Test/: Main.cpp
Custom/: fin.cpp  glb.cpp  init.cpp  proc.cpp
Debug/: BuildLog.htm  CDan.res  DAn.exp  DAn.map  vc60.idb  vc90.idb
Example/: DAN-AnalysisGlobal-Conditions.ccf  DAN-AnalysisGlobal-Coordinates.ccf  DAN-AnalysisGlobal-Spectra.ccf  DAN-analysisCustom-Conditions.ccf  DAN-analysisCustom-Coordinates.ccf  DAN-analysisCustom-Spectra.ccf  DAQ-CamacStandard-Parameters.ccf  DAQ-HM1Standard-Parameters.ccf
Example/Local/: DAN-AnalysisLocal.ccf  Parameters.json  RUN.ccf  parameters-form.json  parameters-global.json  parameters-local.json  parameters.json
Example/subDAN/: DAN-Standard-Coordinates.ccf  DAN-Standard-Parameters.ccf  DAN-Standard-Spectra.ccf
Examples/: JSONReader.cpp
JSONHandler/: CMakeLists.txt  Flag.h  JSONFlag.h  JSONReader.h  rapidjson
JSONHandler/Protocols.junc/: CMakeLists.txt  Flag.cpp  Flag.h
JSONHandler/include/: JSONFlag.h  JSONReader.h
Macros/: CMakeLists.txt  Drag.cpp  Drag.h  FitGauss.cpp  FitGauss.h  Mark.cpp  Mark.h  Proj.cpp  Proj.h  fg.C  fitgauss.C  projx.C  projy.C  rootlogon.C
Macros/old/: fileopen.C  fitGaus.C  project.C  variables.C
Macros/usr/: Draw.cpp  Draw.h  FitGauss.cpp  FitGauss.h  Mark.h  Proj.cpp  Proj.h  fg.C  projx.C  projy.C
Protocols/: CMakeLists.txt  Flag.cpp  Flag.h  Hist.cpp  Hist.h  JSONFlag.cpp  JSONFlag.h  JSONReader.cpp  JSONReader.h  PhysicalQuantity.h  Unit.cpp  Unit.h
Release/: BuildLog.htm  CDan.res  mt.dep  vc60.idb  vc90.idb
Res/: CDan.rc2
Resort/: CMakeLists.txt  LMF_IO.cpp  sort_with_root.cpp
Resort/ConfigFiles/: sorter_elec.txt
ResortCore/: CMakeLists.txt  StandardDAN.cpp
ResortExe/: CMakeLists.txt  rootstuff.cpp
SLNs/VS 6/: CDan.dsp  CDan.dsw
SLNs/VS2010/: CDan.sln  CDan.vcxproj
SLNs/VS6/: CDan.dsp
Scripts/: start-mydesktop.sh
SortCore/: CMakeLists.txt  StandardDAN.cpp
SortExe/: CMakeLists.txt  ConfigFile.json  ElecSorter.txt  IonCalibTab.txt  IonSorter.txt  LMF_IO.cpp  LMF_IO.h  Main.cpp  SortRun.cpp  SortRun.h  SortWrapper.cpp  SortWrapper.h  rootstuff.cpp  rootstuff.h
SortExe/ConfigFiles/: Parameters.json  ion_calibration_table.txt  sorter_elec.txt  sorter_ion.txt
accel/: CMakeLists.txt  accel.cpp  accel.h  binder.cpp
accel/test/: CMakeLists.txt  main.cpp  main.py
example/: CMakeLists.txt
example/accel/: CMakeLists.txt  main.cpp
include/Analysis/: AnalysisTools.cpp  AnalysisTools.h  CDan.h  CDan2002.h  CMakeLists.txt  Debug.cpp  Debug.h  Electron.cpp  Electron.h  ElectronParameters.h  Electrons.cpp  Electrons.h  EquipmentParameters.h  EventDataFlag.h  Flag.cpp  Flag.h  Ion.cpp  Ion.h  IonParameters.h  Ions.cpp  Ions.h  JSONReader.cpp  JSONReader.h  LMFReader.cpp  LMFReader.h  MainForExample.cpp  Object.cpp  Object.h  ObjectFlag.cpp  ObjectFlag.h  ObjectParameters.cpp  ObjectParameters.h  Objects.cpp  Objects.h  Unit.cpp  Unit.h  parameters.json
include/Analysis/Example/: Main.cpp  parameters.json
include/AnalysisCore/: AnalysisTools.h  EquipmentParameters.h  EventDataReader.h  LogWriter.h  Object.h  ObjectFlag.h  ObjectParameters.h  Objects.h
include/Core/: Flag.h  Hist.h  JSONReader.h  Unit.h
lib/: resort64c_VS2010_x86.lib
macros/: CMakeLists.txt  rootlogon.C  variables.C
rapidjson/: document.h  rapidjson.h  writer.h
resort/: resort64c.h
(+13 files in other folders)
